# dota-stats

./: .env.example  .gitignore  FRONTEND.md  README.md  pyproject.toml  requirements.txt
dota_local/: __main__.py  cli.py  config.py  db.py  opendota.py  stratz.py
dota_local/api/: __main__.py  app.py  cli.py  filters.py  main.py
dota_local/api/routers/: ingest.py  matches.py  meta.py  stats.py
dota_local/ingest/: __main__.py  cli.py  enrich.py  metadata.py  refresh.py  seed.py  stratz_outcome.py
schema/: 001_init.sql  002_stratz_outcome.sql
web/: index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: main.tsx
web/src/api/: client.ts  hooks.ts  types.ts
web/src/components/assets/: AbilityIcon.tsx  HeroIcon.tsx  ItemIcon.tsx
web/src/components/filters/: AccountPicker.tsx  AddFilterMenu.tsx  DateRangePopover.tsx  DurationChip.tsx  GameModePopover.tsx  HeroPicker.tsx  OutcomeChip.tsx  PartySizeChip.tsx  PositionChip.tsx  RankRangeChip.tsx  ResultChip.tsx  ToggleChips.tsx
web/src/components/layout/: AccountSwitcher.tsx  AppShell.tsx  FilterBar.tsx  Header.tsx
web/src/components/match-detail/: BuildsSection.tsx  ChatSection.tsx  DraftStrip.tsx  HeaderBar.tsx  KillFeed.tsx  LaneOutcomes.tsx  ObjectivesTimeline.tsx  ScoreboardGrid.tsx
web/src/components/match-list/: MatchTable.tsx  SummaryStrip.tsx  columns.tsx
web/src/lib/: constants.ts  dota.ts  formatters.ts
web/src/routes/: MatchDetailPage.tsx  MatchesPage.tsx  SettingsPage.tsx
web/src/state/: filters.ts  ui.ts  urlSync.ts
web/src/styles/: globals.css
(+6 files in other folders)
