[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dota-local"
version = "0.1.0"
description = "Local-first Dota 2 analytics for turbo parties"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "tenacity>=9.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "gql[httpx]>=3.5",
    "typer>=0.15",
    "rich>=13.9",
]

[project.scripts]
dota-local = "dota_local.cli:app"

[tool.setuptools.packages.find]
include = ["dota_local*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
